syntax = "proto3";

option java_package = "com.qualle.shapeup.model";
option java_multiple_files = true;

message LocalData {
  repeated WorkoutData workout = 1;

  message WorkoutData {
    int64 id = 1;
    int64 date = 2;
    repeated ExerciseData exercises = 3;

    message ExerciseData {
      int64 id = 1;
      string title = 2;
      string image = 3;
      repeated RecordData records = 4;

      message RecordData {
        int64 id = 1;
        string previous = 2;
        float weight = 3;
        int32 reps = 4;
      }
    }
  }
}

message CategoryData {
  int64 id = 1;
  string name = 2;
  ImageData image = 3;
}

message ImageData {
  int64 id = 1;
  string name = 2;
  string link = 3;
}